fixed header spacing

--- a/styles.css
+++ b/styles.css
@@ -3,21 +3,19 @@
     padding: 0;
     box-sizing: border-box;
 }
-body{
-    display: flex;
-    
-}
+
 
 .section-1{
     display: flex;
     background-color: #1f2937;
     color: #f9Faf8;
-    
+    justify-content: space-around;
 }
 
 .links{
     display: flex;
-    
+    gap: 16px;
+    color: #e5e7eb;
 }
 
 .container{
